<resources>
    <string name="app_name">SMILES</string>
    <string name="title_daily_questions">Daily Questions</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_weekly_graph">Weekly Graph</string>
    <string name="title_monthly_graph">Monthly Graph</string>
    <string name="title_export">Export</string>
    <string name="title_information">Information</string>
    <string name="title_movement">Movement</string>
    <string name="title_sleep">Sleep</string>
    <string name="title_imagination">Imagination</string>
    <string name="title_life_satisfaction">Life Satisfaction</string>
    <string name="title_eating">Eating</string>
    <string name="title_speaking">Speaking</string>
    <string name="title_introduction">Introduction</string>
    <string name="title_web_links">Web Links</string>
    <string name="title_smiles">SMILES</string>
    <string-array name="daily_challenge">
        <item>Go to sleep with time for 6–9 hours of sleep</item>
        <item>Play a sport today</item>
        <item>Do bone and muscle strengthening exercises</item>
        <item>Take time to relax</item>
        <item>Practicing mindfulness techniques</item>
        <item>Practicing meditation</item>
        <item>Make time to express your creativity</item>
        <item>Do activities that makes you laugh</item>
        <item>Add fruit and vegetables to your meal</item>
        <item>Avoid high sodium foods</item>
        <item>Go a day without sugar.</item>
        <item>Avoid foods that are high in saturated fat</item>
        <item>Only drink water today</item>
        <item>Make time to speak with people</item>
        <item>Ask for help when you need it</item>
        <item>Remove social obstacles</item>
        <item>Socialize in person</item>
    </string-array>
    <string name="title_color_legend">Score and Color</string>
    <string name="title_settings">Settings</string>
    <string name="daily_web_title">Daily Weblink</string>
    <string name="title_credits">Credits</string>
    <string name="subtitle_credits">Special thanks</string>
    <string name="button_start_daily">Daily Questions</string>
    <string name="subtitle_score_low">Under: Can you do more?</string>
    <string name="subtitle_score_high">Over: Less is more</string>
    <string name="subtitle_score_balanced">Balanced: A perfect day!</string>
    <string name="subtitle_score_unbalanced">Unbalanced: Over and Under</string>
    <string name="subtitle_score_no_data">Score your activities</string>
    <string name="delete">Delete</string>
    <string name="over">Over</string>
    <string name="under">Under</string>
    <string name="balanced">Balanced</string>
    <string name="unbalanced">Unbalanced</string>
    <string name="no_data">No data</string>
    <string name="undo_text">Score deleted</string>
    <string name="undo_confirm">Undo</string>
    <string name="quest_check_app">Check all that apply:</string>
    <string name="quest_sleep_a">Hours of sleep:</string>
    <string name="quest_sleep_b">How many times was your sleep interrupted in the night?</string>
    <string name="quest_movement_a">Length of moderate or vigorous intensity aerobic exercise:</string>
    <string name="quest_movement_b">Did your exercises include bone and muscle strengthening?</string>
    <string name="quest_movement_c">How long did you engage in relaxation techniques?</string>
    <string name="quest_imagination_a">How many minutes did you engage in any mindfulness techniques?</string>
    <string name="quest_imagination_b">How many minutes did you engage in meditation today?</string>
    <string name="quest_imagination_c">How many minutes did you practice imagination or creativity today?</string>
    <string name="quest_laughter_a">Rate your laughter out of 5:</string>
    <string name="quest_rank">Rate how much you agree with the following statements:</string>
    <string name="quest_life_satisfaction_a">You openly shared ideas and thoughts.</string>
    <string name="quest_life_satisfaction_b">You completed tasks and were organized.</string>
    <string name="quest_life_satisfaction_c">You made an effort and time to socialize with others.</string>
    <string name="quest_life_satisfaction_d">You listened to and supported others.</string>
    <string name="quest_life_satisfaction_e">You were able to stay calm and relaxed today.</string>
    <string name="quest_life_satisfaction_f">You took time to be thankful and gracious for what you have.</string>
    <string name="quest_life_satisfaction_g">Your life today was ideal.</string>
    <string name="quest_life_satisfaction_h">All that is involved in your life today is excellent.</string>
    <string name="quest_life_satisfaction_i">You feel satisfied with your day.</string>
    <string name="quest_life_satisfaction_j">You feel that you accomplished important things today.</string>
    <string name="quest_life_satisfaction_k">You feel today was a success.</string>
    <string name="quest_eating_a">Select your percentage of vegetable &amp; fruit intake:</string>
    <string name="quest_eating_b">Select your percentage of whole grain food intake:</string>
    <string name="quest_eating_c">Select your percentage of protein food intake:</string>
    <string name="quest_eating_d">You feel you consumed the least amount of sodium that you could.</string>
    <string name="quest_eating_e">You feel you consumed the least amount of free sugar that you could.</string>
    <string name="quest_eating_f">You feel you consumed the least amount of saturated fat that you could.</string>
    <string name="quest_eating_g">You make water your beverage of choice</string>
    <string name="quest_speaking_a">Rate the amount of time spent socializing in person or over social media from a low of 1 to a high of 5.</string>
    <string name="quest_speaking_b">You sought assistance and/or debriefed when needed.</string>
    <string name="quest_speaking_c">Nothing prevented your ability to share your thoughts.</string>
    <string name="quest_speaking_d">You engaged in more social media than face-to-face socializing.</string>
    <string name="quest_speaking_e">Your socializing negatively impacted your health or took away from your life balance.</string>
    <string name="feedback_over_100_percent">Please select 100% or less food.</string>
    <string name="quest_results">Your score is %s!</string>
    <string name="quest_button">Score</string>
    <string name="daily_sleep_feedback">To achieve a balanced score, sleep for 6–9 hours and reduce potential interruptions.</string>
    <string name="daily_movement_feedback">To achieve a balanced score, practice vigorous aerobic exercise for 10–45 minutes, do bone and muscle strengthening activities, and practice relaxation techniques for 10–45 minutes.</string>
    <string name="daily_imagination_feedback">To achieve a balanced score, spend 10–30 minutes in each category.</string>
    <string name="daily_life_satisfaction_feedback">To achieve a balanced score, do well for each life question.</string>
    <string name="daily_eating_feedback">To achieve a balanced score, eat 50% fruits and vegetables, 25% whole grain foods, 25% protein foods, avoid too much sodium, free sugar, and saturated fat, and make water your beverage of choice.</string>
    <string name="daily_speaking_feedback">To achieve a balanced score, speak often, ask for help when needed, share your thoughts, socialize face to face, and avoid negativity.</string>
    <string name="score_high">over</string>
    <string name="score_low">under</string>
    <string name="score_balanced">balanced</string>
    <string name="score_unbalanced">unbalanced</string>
    <string name="feedback_unselected">Please answer all of the questions.</string>
    <string name="score_error">Error</string>
    <string name="introduction_title_smiles">SMILES</string>
    <string name="introduction_subtitle_smiles">The Acronym for Nurses\' Self Care </string>
    <string name="introduction_explanation_smiles">SMILES is a self care tool providing a framework that is realistic,
        applicable, and easily utilized. To support the diversity of the nursing profession. Encouraging a variety of
        self-enhancing methods to support work/life balance to inspire a continual journey towards a healthy lifestyle. </string>
    <string name="introduction_next">Next</string>
    <string name="introduction_back">Back</string>
    <string name="introduction_title_stress1">Stress</string>
    <string name="introduction_explanation_stress1">Stress an inevitable part of nursing, deficits lie regarding the practice
        of positive stress relieving methods. Despite nurses having knowledge to aspire and teach self –care, it is a subject
        that is often neglected in the nursing profession.</string>
    <string name="introduction_explanation_sleep">Sleep deprivation and fatigue reduces cognitive functioning and has health
        consequences often impairing workplace performance increasing human errors and reduce patient safety.
        Sleep hygiene practices and prioritizing sleep can assist in encouraging healthy sleep routines.</string>
    <string name="information_introduction_balanced_heading">Blue is Balanced</string>
    <string name="information_introduction_balanced_body_text">Achieving a score of balanced means
                    that you are accomplishing work life balance! This is the score you want.</string>
    <string name="information_introduction_over_heading">Red is Over</string>
    <string name="information_introduction_over_body_text">This score indicates that you are engaging
                                                        in an activity in excessive amounts.</string>
    <string name="information_introduction_under_heading">Yellow is Under</string>
    <string name="information_introduction_under_body_text">This score indicates that you are not
                                                            engaging in an activity enough. </string>
    <string name="information_introduction_unbalanced_heading">Orange is Unbalanced</string>
    <string name="information_introduction_unbalanced_body_text">This score indicates that you have a
                                                            combination of over and under.</string>
    <string name="information_introduction_no_data_heading">Grey is No Data</string>
    <string name="information_introduction_no_data_body_text">This score indicates that you have not
                                        inputed any data.</string>
    <string name="less">Less</string>
    <string name="more">More</string>
    <string name="percent_25">25%</string>
    <string name="percent_50">50%</string>
    <string name="credit_photo_heading">Photos</string>
    <string name="credit_photo_body">Photographs were provided by Pexels</string>
    <string name="credit_icon_heading">Icons</string>
    <string name="credit_icon_body1">Sleep icon made by Good Ware from www.flaticon.com</string>
    <string name="credit_icon_body2">Launcher icon, Movement, imagination, and eating icons made by Freepik from www.flaticon.com</string>
    <string name="credit_icon_body3">Laughter icon made by Smashicons from www.flaticon.com</string>
    <string name="credit_icon_body4">Speaking icon made by Icomoon from www.flaticon.com</string>
    <string name="credit_developers_heading">Developers</string>
    <string name="credit_developers_body">Komal Aheer, Terry Youngman, and Wamaitha Gitaka</string>
    <string name="show_challenge">Show daily challenge</string>
    <string name="show_web">Show daily web link</string>
    <string name="reset_permissions">Reset permissions</string>
</resources>