<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/textView"
        style="@style/Heading1Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/credit_photo_heading"
        android:textAlignment="viewStart" />

    <TextView
        android:id="@+id/textView3"
        style="@style/BodyText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/credit_photo_body" />

    <TextView
        android:id="@+id/textView4"
        style="@style/Heading1Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/credit_icon_heading"
        android:textAlignment="viewStart" />

    <TextView
        android:id="@+id/textView5"
        style="@style/BodyText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/credit_icon_body1" />

    <TextView
        android:id="@+id/textView6"
        style="@style/BodyText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/credit_icon_body2" />

    <TextView
        android:id="@+id/textView7"
        style="@style/BodyText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/credit_icon_body3" />

    <TextView
        android:id="@+id/textView8"
        style="@style/BodyText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/credit_icon_body4" />

    <TextView
        android:id="@+id/textView9"
        style="@style/Heading1Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/credit_developers_heading"
        android:textAlignment="viewStart" />

    <TextView
        android:id="@+id/textView10"
        style="@style/BodyText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/credit_developers_body" />


</LinearLayout>