<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="16dp">

    <Switch
        android:id="@+id/setting_switch_daily_challenge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_weight="1"
        android:checked="true"
        android:text="@string/show_challenge"
        android:textSize="22dp" />

    <Switch
        android:id="@+id/setting_switch_daily_web"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_weight="1"
        android:checked="true"
        android:text="@string/show_web"
        android:textSize="22dp" />

    <Button
        android:id="@+id/button_reset_permissions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/reset_permissions" />

</LinearLayout>