<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/eating_scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top|center"
        android:orientation="vertical"
        android:padding="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- First Question -->
            <TextView
                android:id="@+id/question_text_1"
                style="@style/BodyText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:text="@string/quest_eating_a"
                tools:layout_editor_absoluteX="107dp"
                tools:layout_editor_absoluteY="61dp" />

            <!-- Info Icon -->
            <ImageView
                android:id="@+id/icon_eating_weblink_1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:cropToPadding="false"
                app:srcCompat="@drawable/icon_external_link" />
        </LinearLayout>

        <!-- Input Buttons -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/icon_1a"
                style="@style/ButtonText"
                android:background="@drawable/ic_wide_border"
                android:text="@string/less" />

            <TextView
                android:id="@+id/icon_1b"
                style="@style/ButtonText"
                android:background="@drawable/ic_wide_border"
                android:text="@string/percent_50" />

            <TextView
                android:id="@+id/icon_1c"
                style="@style/ButtonText"
                android:background="@drawable/ic_wide_border"
                android:text="@string/more" />

        </LinearLayout>

        <TextView
            android:id="@+id/question_text_2"
            style="@style/BodyText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quest_eating_b"
            tools:layout_editor_absoluteX="107dp"
            tools:layout_editor_absoluteY="61dp" />

        <!-- Input Buttons -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/icon_2a"
                style="@style/ButtonText"
                android:background="@drawable/ic_wide_border"
                android:text="@string/less" />

            <TextView
                android:id="@+id/icon_2b"
                style="@style/ButtonText"
                android:background="@drawable/ic_wide_border"
                android:text="@string/percent_25" />

            <TextView
                android:id="@+id/icon_2c"
                style="@style/ButtonText"
                android:background="@drawable/ic_wide_border"
                android:text="@string/more" />

        </LinearLayout>

        <TextView
            android:id="@+id/question_text_3"
            style="@style/BodyText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quest_eating_c"
            tools:layout_editor_absoluteX="107dp"
            tools:layout_editor_absoluteY="61dp" />

        <!-- Input Buttons -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/icon_3a"
                style="@style/ButtonText"
                android:background="@drawable/ic_wide_border"
                android:text="@string/less" />

            <TextView
                android:id="@+id/icon_3b"
                style="@style/ButtonText"
                android:background="@drawable/ic_wide_border"
                android:text="@string/percent_25" />

            <TextView
                android:id="@+id/icon_3c"
                style="@style/ButtonText"
                android:background="@drawable/ic_wide_border"
                android:text="@string/more" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/question_eating_check"
                style="@style/BodyText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:text="@string/quest_check_app" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/question_text_4"
                style="@style/BodyText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:text="@string/quest_eating_d"
                tools:layout_editor_absoluteX="107dp"
                tools:layout_editor_absoluteY="61dp" />

            <CheckBox
                android:id="@+id/eating_checkBox_1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/question_text_5"
                style="@style/BodyText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:text="@string/quest_eating_e"
                tools:layout_editor_absoluteX="107dp"
                tools:layout_editor_absoluteY="61dp" />

            <CheckBox
                android:id="@+id/eating_checkBox_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/question_text_6"
                style="@style/BodyText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:text="@string/quest_eating_f"
                tools:layout_editor_absoluteX="107dp"
                tools:layout_editor_absoluteY="61dp" />

            <CheckBox
                android:id="@+id/eating_checkBox_3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/question_text_7"
                style="@style/BodyText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:text="@string/quest_eating_g"
                tools:layout_editor_absoluteX="107dp"
                tools:layout_editor_absoluteY="61dp" />

            <CheckBox
                android:id="@+id/eating_checkBox_4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>


        <!-- Score Button -->
        <Button
            android:id="@+id/score_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/quest_button"
            android:textAlignment="center" />

        <!-- Score Text -->
        <TextView
            android:id="@+id/text_score"
            style="@style/NotificationText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:visibility="invisible" />

        <TextView
            android:id="@+id/text_eating_feedback"
            style="@style/BodyText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/daily_eating_feedback"
            android:visibility="invisible" />


    </LinearLayout>

</ScrollView>