<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/introduction_scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top|center">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/introduction_balanced_image"
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:srcCompat="@drawable/ic_box_balanced" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/introduction_balanced_heading"
                    style="@style/TitleText"
                    android:layout_width="315dp"
                    android:layout_height="wrap_content"
                    android:text="@string/information_introduction_balanced_heading" />


                <TextView
                    android:id="@+id/introduction_balanced_body_text"
                    style="@style/BodyText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/information_introduction_balanced_body_text" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/introduction_over_image"
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:srcCompat="@drawable/ic_box_over" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/introduction_over_heading"
                    style="@style/TitleText"
                    android:layout_width="226dp"
                    android:layout_height="wrap_content"
                    android:text="@string/information_introduction_over_heading" />


                <TextView
                    android:id="@+id/introduction_over_body_text"
                    style="@style/BodyText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/information_introduction_over_body_text" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/introduction_under_image"
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:srcCompat="@drawable/ic_box_under" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/introduction_under_heading"
                    style="@style/TitleText"
                    android:layout_width="285dp"
                    android:layout_height="wrap_content"
                    android:text="@string/information_introduction_under_heading" />


                <TextView
                    android:id="@+id/introduction_under_body_text"
                    style="@style/BodyText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/information_introduction_under_body_text" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/introduction_unbalanced_image"
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:srcCompat="@drawable/ic_box_unbalanced" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/introduction_unbalanced_heading"
                    style="@style/TitleText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/information_introduction_unbalanced_heading" />


                <TextView
                    android:id="@+id/introduction_unbalanced_body_text"
                    style="@style/BodyText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/information_introduction_unbalanced_body_text" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/introduction_no_data_image"
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:srcCompat="@drawable/ic_box_no_data" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/introduction_no_data_heading"
                    style="@style/TitleText"
                    android:layout_width="305dp"
                    android:layout_height="wrap_content"
                    android:text="@string/information_introduction_no_data_heading" />


                <TextView
                    android:id="@+id/introduction_no_data_body_text"
                    style="@style/BodyText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/information_introduction_no_data_body_text" />

            </LinearLayout>

        </LinearLayout>





    </LinearLayout>

    </ScrollView>

